[package]
name = "convdate"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
thiserror = "1.0.30"

[dev-dependencies]
assert_approx_eq = "1.1.0"
tempfile = "3.2.0"
rstest = "0.11.0"
